Include personal-presence images in about page + Create rawhtml shortcode

--- a/themes/cayman/assets/scss/cayman.scss
+++ b/themes/cayman/assets/scss/cayman.scss
@@ -378,3 +378,12 @@ a {
     background-color: whitesmoke;
   }
 }
+
+.online-presence-logo {
+  width: 4rem;
+  padding-right: 1rem;
+
+  @include small {
+    width: 3.5rem;
+  }
+}
