--- a/themes/cayman/layouts/partials/blog-post-list.html
+++ b/themes/cayman/layouts/partials/blog-post-list.html
@@ -1,4 +1,7 @@
 <h1>{{ .Title }}</h1>
+<script>
+  debugger
+ <script/>
 <ul>
 {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
 {{ range $pages.ByPublishDate.Reverse }}
