--- a/themes/cayman/layouts/_default/list.html
+++ b/themes/cayman/layouts/_default/list.html
@@ -1,5 +1,10 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
+<h1>
+  <span class="taxanomy-list-title-indicator">
+    {{humanize .Type | singularize}}:
+  </span>
+  &nbsp;
+  {{ .Title }}</h1>
 <ul>
 {{ $pages := .Pages }}
 {{ range $pages.ByPublishDate.Reverse }}
