--- a/themes/cayman/layouts/_default/terms.html
+++ b/themes/cayman/layouts/_default/terms.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <h1>Browse Blog by {{ .Title }}</h1>
+  <h1>Blog {{ .Title }}</h1>
   <ul>
     {{ range .Data.Terms.Alphabetical }}
       <li>
