Try to get CSS to display on Netlify by removing baseURL from config.toml

--- a/themes/cayman/layouts/partials/head.html
+++ b/themes/cayman/layouts/partials/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   {{ hugo.Generator }}
-  <link rel="stylesheet" href="{{ "css/cayman.5d0fee4231e4b00159631ab7f7f0d45a3518dabfb4e9bbc1b0a97a60e924cacd.css" | absURL }}">
+  <link rel="stylesheet" href="{{ "css/normalize.css" | absURL }}">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   {{ $caymanScss := "scss/cayman.scss" }}
   {{ $options := (dict "targetPath" "css/cayman.css") }}
