Style blog post footer

--- a/themes/cayman/assets/scss/cayman.scss
+++ b/themes/cayman/assets/scss/cayman.scss
@@ -420,3 +420,10 @@ figure {
 .taxanomy-list-title-indicator {
   border-bottom: 3px solid whitesmoke;
 }
+
+.blog-post-footer {
+  background-color: rgb(176, 196, 222);
+  opacity: 0.8;
+  padding: 10px;
+  border-radius: 2%;
+}
