--- a/themes/cayman/layouts/post/single.html
+++ b/themes/cayman/layouts/post/single.html
@@ -61,6 +61,42 @@
     </div>
     {{ end }}
   </div>
-  
   {{ partial "disqus.html" . }}
+
+  <!-- Meta Tags -->
+  <meta property="og:type" content="article" />
+  <meta property="og:article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
+  <meta property="article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
+
+  <!-- JSON Schema Obj (used for SEO) -->
+    <script defer type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Article",
+          "mainEntityOfPage": {
+             "@type": "WebPage",
+             "@id": "{{ .Site.BaseURL }}"
+          },
+          "name" : "{{ .Title }}",
+          "headline" : "{{ .Title }}",
+          "description": {{ or .Description .Summary }},
+          "author": {
+            "@type": "Person",
+            "name": "Hakeem Almidan"
+          },
+          "datePublished": "{{ .Date.Format "2006-01-02" }}",
+          "wordCount": {{ .WordCount }},
+          "mainEntityOfPage": "True",
+          "datePublished": "{{ .Date.Format "2006-01-02" }}",
+          "dateModified": "{{ .Lastmod.Format "2006-01-02" }}",
+          "url" : "{{ .Permalink }}",
+          "publisher": {
+            "@type": "Organization",
+            "name": "{{ .Site.Title }}"
+          },
+          "keywords" : [ {{ if isset .Params "tags" }}{{ range .Params.tags }}"{{ . }}",{{ end }}{{ end }}
+                        {{ if isset .Params "categories" }}{{ range .Params.categories }}"{{ . }}",{{ end }}{{ end }}
+                         "Blog" ]
+        }
+    </script>
 {{ end }}
