--- a/themes/cayman/layouts/post/single.html
+++ b/themes/cayman/layouts/post/single.html
@@ -68,7 +68,7 @@
   <meta property="og:article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
   <meta property="article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
 
-  <!-- JSON Schema Obj (used for SEO) -->
+  <!-- Structured Data Markup (used for SEO) -->
     <script defer type="application/ld+json">
         {
           "@context": "http://schema.org",
@@ -94,6 +94,8 @@
             "@type": "Organization",
             "name": "{{ .Site.Title }}"
           },
+          "articleBody": "{{ .Plain }}",
+          "articleSection": "{{ .Summary }}",
           "keywords" : [ {{ if isset .Params "tags" }}{{ range .Params.tags }}"{{ . }}",{{ end }}{{ end }}
                         {{ if isset .Params "categories" }}{{ range .Params.categories }}"{{ . }}",{{ end }}{{ end }}
                          "Blog" ]
