Fix description of Blog page and add comments to others

--- a/themes/cayman/layouts/_default/list.html
+++ b/themes/cayman/layouts/_default/list.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+<!-- List of certain taxonomy element -->
 <h1>
   <span class="taxanomy-list-title-indicator">
     {{humanize .Type | singularize}}:
