--- a/themes/cayman/layouts/index.html
+++ b/themes/cayman/layouts/index.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+  <!-- Home (Blog) Page -->
   <h1>{{ .Title }}</h1>
   {{ if (eq .Params.title "Blog") }}
     <div class="blog-nav__container">
