--- a/themes/cayman/layouts/_default/terms.html
+++ b/themes/cayman/layouts/_default/terms.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+  <!-- List of elements within a taxonomy -->
   <h1>Blog {{ .Title }}</h1>
   <ul>
     {{ range .Data.Terms.Alphabetical }}
