--- a/themes/cayman/layouts/post/single.html
+++ b/themes/cayman/layouts/post/single.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+  <!-- Single post -->
   <h1>{{ .Title }}</h1>
   {{ .Content }}
 
@@ -69,36 +70,36 @@
   <meta property="article:published_time" content={{ .Date.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
 
   <!-- Structured Data Markup (used for SEO) -->
-    <script defer type="application/ld+json">
-        {
-          "@context": "http://schema.org",
-          "@type": "Article",
-          "mainEntityOfPage": {
-             "@type": "WebPage",
-             "@id": "{{ .Site.BaseURL }}"
-          },
-          "name" : "{{ .Title }}",
-          "headline" : "{{ .Title }}",
-          "description": {{ or .Description .Summary }},
-          "author": {
-            "@type": "Person",
-            "name": "Hakeem Almidan"
-          },
-          "datePublished": "{{ .Date.Format "2006-01-02" }}",
-          "wordCount": {{ .WordCount }},
-          "mainEntityOfPage": "True",
-          "datePublished": "{{ .Date.Format "2006-01-02" }}",
-          "dateModified": "{{ .Lastmod.Format "2006-01-02" }}",
-          "url" : "{{ .Permalink }}",
-          "publisher": {
-            "@type": "Organization",
-            "name": "{{ .Site.Title }}"
-          },
-          "articleBody": "{{ .Plain }}",
-          "articleSection": "{{ .Summary }}",
-          "keywords" : [ {{ if isset .Params "tags" }}{{ range .Params.tags }}"{{ . }}",{{ end }}{{ end }}
-                        {{ if isset .Params "categories" }}{{ range .Params.categories }}"{{ . }}",{{ end }}{{ end }}
-                         "Blog" ]
-        }
-    </script>
+  <script defer type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "{{ .Site.BaseURL }}"
+        },
+        "name" : "{{ .Title }}",
+        "headline" : "{{ .Title }}",
+        "description": {{ or .Description .Summary }},
+        "author": {
+          "@type": "Person",
+          "name": "Hakeem Almidan"
+        },
+        "datePublished": "{{ .Date.Format "2006-01-02" }}",
+        "wordCount": {{ .WordCount }},
+        "mainEntityOfPage": "True",
+        "datePublished": "{{ .Date.Format "2006-01-02" }}",
+        "dateModified": "{{ .Lastmod.Format "2006-01-02" }}",
+        "url" : "{{ .Permalink }}",
+        "publisher": {
+          "@type": "Organization",
+          "name": "{{ .Site.Title }}"
+        },
+        "articleBody": "{{ .Plain }}",
+        "articleSection": "{{ .Summary }}",
+        "keywords" : [ {{ if isset .Params "tags" }}{{ range .Params.tags }}"{{ . }}",{{ end }}{{ end }}
+                      {{ if isset .Params "categories" }}{{ range .Params.categories }}"{{ . }}",{{ end }}{{ end }}
+                        "Blog" ]
+      }
+  </script>
 {{ end }}
