Add more details to description meta tag for better SEO

--- a/themes/cayman/layouts/partials/meta.html
+++ b/themes/cayman/layouts/partials/meta.html
@@ -7,10 +7,10 @@
 
 <!-- Description Tags -->
 {{ if or .Params.description .Summary }}
-  <meta name="description" content="{{ or .Params.description .Summary}}" />
-  <meta itemprop="description" content="{{ or .Params.description .Summary }}" />
-  <meta property="og:description" content="{{ or .Params.description .Summary }}" />
-  <meta name="twitter:description" content="{{ or .Params.description .Summary }}" />
+  <meta name="description" content="{{ or ( .Params.description + " " + .Summary) .Summary}}" />
+  <meta itemprop="description" content="{{ or ( .Params.description + " " + .Summary) .Summary }}" />
+  <meta property="og:description" content="{{ or ( .Params.description + " " + .Summary) .Summary }}" />
+  <meta name="twitter:description" content="{{ or ( .Params.description + " " + .Summary) .Summary }}" />
 {{ end }}
 
 <!-- Link Tags -->
