--- a/themes/cayman/layouts/partials/meta.html
+++ b/themes/cayman/layouts/partials/meta.html
@@ -7,10 +7,10 @@
 
 <!-- Description Tags -->
 {{ if or (and .Params.description .Summary) .Summary }}
-  <meta name="description" content="{{ or (print .Params.description " " .Summary) .Summary}}" />
-  <meta itemprop="description" content="{{ or (print .Params.description " " .Summary) .Summary }}" />
-  <meta property="og:description" content="{{ or (print .Params.description " " .Summary) .Summary }}" />
-  <meta name="twitter:description" content="{{ or (print .Params.description " " .Summary) .Summary }}" />
+  <meta name="description" content="{{ or (printf "%s %s" .Params.description .Summary) .Summary}}" />
+  <meta itemprop="description" content="{{ or (printf "%s %s" .Params.description .Summary) .Summary }}" />
+  <meta property="og:description" content="{{ or (printf "%s %s" .Params.description .Summary) .Summary }}" />
+  <meta name="twitter:description" content="{{ or (printf "%s %s" .Params.description .Summary) .Summary }}" />
 {{ end }}
 
 <!-- Link Tags -->
