--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -6,6 +6,12 @@ body {
   background-color: deepskyblue;
 }
 
+.content {
+  p {
+    line-height: 1.5rem;
+  }
+}
+
 figure {
   &.image {
     figcaption {
