Add disquess comments + adjust media query

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -67,3 +67,9 @@ figure {
 .u-filter-almost-black-and-white {
   filter: grayscale(0.9);
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 0.8rem;
+  }
+}
