Create new post + 'hugo'

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -68,6 +68,14 @@ figure {
   filter: grayscale(0.9);
 }
 
+figure {
+  &.image {
+  &.center {
+      text-align: center;
+    }
+  }
+}
+
 @media only screen and (max-width: 600px) {
   body {
     font-size: 0.8rem;
