--- a/themes/zen/layouts/_default/single.html
+++ b/themes/zen/layouts/_default/single.html
@@ -4,7 +4,7 @@
 <header>
 <h1 class="title {{ if $.Param "submitted" | default false }}title-submitted{{ end }}">{{ .Title }}</h1>
 {{ if $.Param "submitted" | default false }}{{ partial "submitted.html" . }}{{ end -}}
-{{ if .Params.tags }}{{ partial "tags.html" . }}{{ end -}}
+<!-- {{ if .Params.tags }}{{ partial "tags.html" . }}{{ end -}} -->
 </header>
 <div class="content">
 {{ .Content }}
