Update terminal-search post content

--- a/themes/zen/layouts/_default/single.html
+++ b/themes/zen/layouts/_default/single.html
@@ -16,7 +16,7 @@
   </p>
 
   <p>
-    Promise not to send more than 1 email per month (not counting subscription confirmation email 🙄) 🤞
+    Promise not to send more than 1 email per month (not counting subscription confirmation email 🙄) 👨‍💻
   </p>
   <!-- Begin Mailchimp Signup Form -->
   <div id="mc_embed_signup">
