Remove right-side menu on post pages

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -6,6 +6,11 @@ body {
   background-color: white;
 }
 
+.header__logo-image {
+  width: 9rem;
+  height: 9rem;
+}
+
 .content {
   p {
     line-height: 1.5rem;
