--- a/themes/zen/layouts/_default/baseof.html
+++ b/themes/zen/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="{{ if .IsPage }}single-page{{ else }}list-page{{ end }}{{ if .IsHome }} front{{ end }}">
-<div class="page layout__page{{ if $.Param "sidebar" | default true }} layout__sidebar-second{{ end }}">
+<div class="page layout__page{{ if and ($.Param "sidebar") (not (eq .Section "posts")) | default true }} layout__sidebar-second{{ end }}">
 <header class="header layout__header">
 {{ if $.Param "logo" | default true }}<a href="{{ "/" | relLangURL }}" title="Home" rel="home" class="header__logo"> <img src="{{ "/images/logo.png" | relURL }}" alt="Home" class="header__logo-image"></a>{{ end }}
 <h1 class="header__site-name">
@@ -29,7 +29,7 @@
 
 {{ block "main" . }}{{ end }}
 
-{{ if $.Param "sidebar" }}{{ partial "sidebar.html" . }}{{ end -}}
+{{ if and ($.Param "sidebar") (not (eq .Section "posts"))  }}{{ partial "sidebar.html" . }}{{ end -}}
 
 <footer class="footer layout__footer">
 {{ if $.Param "feedlinks" }}{{ partial "feedlinks.html" . }}{{ end -}}
