--- a/themes/zen/layouts/_default/summary.html
+++ b/themes/zen/layouts/_default/summary.html
@@ -4,6 +4,6 @@
 {{ if $.Param "submitted" | default false }}{{ partial "submitted.html" . -}}{{ end }}
 </header>
 <div class="content">
-{{ .Summary }}
+{{ .Summary | plainify }}
 </div>
 </article>
